--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,7 @@
     "stylus": "0.54.7",
     "typescript": "3.7.2",
     "webpack": "4.41.1",
-    "webpack-cli": "3.3.10",
-    "webpack-dev-server": "3.9.0"
+    "webpack-cli": "3.3.10"
   },
   "devDependencies": {
     "@types/es6-promise": "3.3.0",
@@ -28,9 +27,7 @@
     "autoprefixer": "9.7.1",
     "awesome-typescript-loader": "5.2.1",
     "css-loader": "3.2.0",
-    "css-raw-loader": "0.1.2",
     "cssnano": "4.1.10",
-    "extract-text-webpack-plugin": "3.0.2",
     "mini-css-extract-plugin": "0.8.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
